added a method to convert String back to a byte array.