@@ -1,5 +1,6 @@
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -12,8 +13,9 @@ public class rawDataLogger {
     private Path directoryPath;
     private Path filePath;
     private final BufferedReader reader;
+
     //dname is Directory File name and fName is filename.
-    public rawDataLogger (String dName, String fName) {
+    public rawDataLogger(String dName, String fName) {
         createDirectory(dName);
         createFile(fName);
         try {
@@ -23,15 +25,43 @@ public class rawDataLogger {
         }
     }
 
-    public byte[] readBytes(){
+    //Errors when reading multiple lines, but reading as one big line.
+    public byte[] convertBytes() {
         try {
-            return Files.readAllBytes(filePath);
-        }catch (Exception e){
+            String in = Files.readString(filePath, StandardCharsets.US_ASCII);
+            in = in.replaceAll(" ", "");
+            in = in.substring(1, in.length() - 1);
+            StringBuilder out = new StringBuilder();
+            byte[] num = new byte[323];
+            int numIndex = 0;
+            System.out.println(in.length());
+            for (int i = 0; i < in.length(); i++) {
+                char a = in.charAt(i);
+                //|| (Character.compare(a, (char) 91))
+                if (Character.compare(a, (char) 44) != 0) {
+                    out.append(a);
+                } else {
+                    num[numIndex++] = (Byte.parseByte(String.valueOf(out)));
+                    out = new StringBuilder();
+                }
+            }
+            return num;
+        } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException();
         }
     }
-    public String readLine(){
+
+    public byte[] readBytes() {
+        try {
+            return Files.readAllBytes(filePath);
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new RuntimeException();
+        }
+    }
+
+    public String readLine() {
         try {
             return reader.readLine();
         } catch (Exception e) {
@@ -39,34 +69,36 @@ public class rawDataLogger {
             return "error";
         }
     }
-    public List<String> readFile(){
-        try{
+
+    public List<String> readFile() {
+        try {
             return Files.readAllLines(filePath);
-        } catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException();
         }
     }
 
-    public void clearFile(){
-        try{
+    public void clearFile() {
+        try {
             Files.write(filePath, "".getBytes());
-        } catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
-    public void writeToFile(byte[] buffer){
-        try{
+
+    public void writeToFile(byte[] buffer) {
+        try {
             Files.write(filePath, buffer, StandardOpenOption.APPEND);
             Files.write(filePath, System.getProperty("line.separator").getBytes(), StandardOpenOption.APPEND);
-        } catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
     public void createDirectory(String name) {
         try {
-                directoryPath = Paths.get(name);
+            directoryPath = Paths.get(name);
             if (!Files.exists(directoryPath)) {
                 Files.createDirectory(directoryPath);
             }
